Closed
Bug 1890902
Opened 7 months ago
Closed 7 months ago
Perma Bp-clang-trunk /builds/worker/checkouts/gecko/dom/base/ContentIterator.cpp:718:21: error: variable 'shadowRoot' set but not used [-Werror,-Wunused-but-set-variable]
Categories
(Core :: DOM: Core & HTML, defect, P5)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
127 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox124 | --- | unaffected |
firefox125 | --- | unaffected |
firefox126 | --- | wontfix |
firefox127 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: glandium)
References
(Blocks 2 open bugs, Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=454241049&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Ge34Fi2fTLWk7i1QH3cfFw/runs/0/artifacts/public/logs/live_backing.log
gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/media/webrtc'
[task 2024-04-11T00:09:34.164Z] 00:09:34 INFO - dom/media/webrtc/MediaEngineWebRTC.o
[task 2024-04-11T00:09:34.165Z] 00:09:34 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/media/webrtc'
[task 2024-04-11T00:09:34.173Z] 00:09:34 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/base'
[task 2024-04-11T00:09:34.180Z] 00:09:34 INFO - /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -o Unified_cpp_dom_base1.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -DNDEBUG=1 -DTRIMMED=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/workspace/obj-build/dom/base -I/builds/worker/checkouts/gecko/dom/battery -I/builds/worker/checkouts/gecko/dom/events -I/builds/worker/checkouts/gecko/dom/media -I/builds/worker/checkouts/gecko/dom/network -I/builds/worker/checkouts/gecko/caps -I/builds/worker/checkouts/gecko/docshell/base -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/file -I/builds/worker/checkouts/gecko/dom/geolocation -I/builds/worker/checkouts/gecko/dom/html -I/builds/worker/checkouts/gecko/dom/ipc -I/builds/worker/checkouts/gecko/dom/storage -I/builds/worker/checkouts/gecko/dom/svg -I/builds/worker/checkouts/gecko/dom/xml -I/builds/worker/checkouts/gecko/dom/xslt/xpath -I/builds/worker/checkouts/gecko/dom/xul -I/builds/worker/checkouts/gecko/extensions/spellcheck/src -I/builds/worker/checkouts/gecko/gfx/2d -I/builds/worker/checkouts/gecko/image -I/builds/worker/checkouts/gecko/js/xpconnect/loader -I/builds/worker/checkouts/gecko/js/xpconnect/src -I/builds/worker/checkouts/gecko/js/xpconnect/wrappers -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/layout/forms -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/netwerk/base -I/builds/worker/checkouts/gecko/netwerk/protocol/http -I/builds/worker/checkouts/gecko/netwerk/url-classifier -I/builds/worker/checkouts/gecko/parser/htmlparser -I/builds/worker/checkouts/gecko/security/manager/ssl -I/builds/worker/checkouts/gecko/third_party/xsimd/include -I/builds/worker/checkouts/gecko/widget -I/builds/worker/checkouts/gecko/xpcom/ds -I/builds/worker/checkouts/gecko/netwerk/sctp/datachannel -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wenum-float-conversion -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wno-deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-vla-cxx-extension -Wno-unknown-warning-option -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pixman-1 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/freetype2 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gdk-pixbuf-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gio-unix-2.0/ -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/harfbuzz -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/atk-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi2-atk/2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/unix-print -pthread -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/Unified_cpp_dom_base1.o.pp Unified_cpp_dom_base1.cpp
[task 2024-04-11T00:09:34.185Z] 00:09:34 INFO - In file included from Unified_cpp_dom_base1.cpp:38:
[task 2024-04-11T00:09:34.187Z] 00:09:34 ERROR - /builds/worker/checkouts/gecko/dom/base/ContentIterator.cpp:718:21: error: variable 'shadowRoot' set but not used [-Werror,-Wunused-but-set-variable]
[task 2024-04-11T00:09:34.188Z] 00:09:34 INFO - 718 | if (ShadowRoot* shadowRoot = ShadowRoot::FromNode(aNode)) {
[task 2024-04-11T00:09:34.189Z] 00:09:34 INFO - | ^
[task 2024-04-11T00:09:34.190Z] 00:09:34 INFO - 1 error generated.
[task 2024-04-11T00:09:34.190Z] 00:09:34 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:689: Unified_cpp_dom_base1.o] Error 1
[task 2024-04-11T00:09:34.191Z] 00:09:34 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/base'
[task 2024-04-11T00:09:34.192Z] 00:09:34 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/base'
Updated•7 months ago
|
Summary: Intermittent /builds/worker/checkouts/gecko/dom/base/ContentIterator.cpp:718:21: error: variable 'shadowRoot' set but not used [-Werror,-Wunused-but-set-variable] → Intermittent Bp-clang-trunk /builds/worker/checkouts/gecko/dom/base/ContentIterator.cpp:718:21: error: variable 'shadowRoot' set but not used [-Werror,-Wunused-but-set-variable]
Assignee | ||
Updated•7 months ago
|
Summary: Intermittent Bp-clang-trunk /builds/worker/checkouts/gecko/dom/base/ContentIterator.cpp:718:21: error: variable 'shadowRoot' set but not used [-Werror,-Wunused-but-set-variable] → Perma Bp-clang-trunk /builds/worker/checkouts/gecko/dom/base/ContentIterator.cpp:718:21: error: variable 'shadowRoot' set but not used [-Werror,-Wunused-but-set-variable]
Assignee | ||
Updated•7 months ago
|
Component: Task Configuration → DOM: Core & HTML
Product: Firefox Build System → Core
Comment 1•7 months ago
|
||
Set release status flags based on info from the regressing bug 1867058
:sefeng, since you are the author of the regressor, bug 1867058, could you take a look?
For more information, please visit BugBot documentation.
status-firefox124:
--- → unaffected
status-firefox125:
--- → unaffected
status-firefox126:
--- → affected
status-firefox-esr115:
--- → unaffected
Flags: needinfo?(sefeng)
Assignee | ||
Comment 2•7 months ago
|
||
Updated•7 months ago
|
Assignee: nobody → mh+mozilla
Status: NEW → ASSIGNED
Comment hidden (Intermittent Failures Robot) |
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/2e7c139214fb
Remove unused assignment. r=sefeng
Comment 6•7 months ago
|
||
Set release status flags based on info from the regressing bug 1867058
status-firefox127:
--- → affected
Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch
Comment 8•7 months ago
|
||
The patch landed in nightly and beta is affected.
:glandium, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox126
towontfix
.
For more information, please visit BugBot documentation.
Flags: needinfo?(mh+mozilla)
Assignee | ||
Updated•7 months ago
|
Flags: needinfo?(mh+mozilla)
Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•