Bug 1890902 - Remove unused assignment. r=sefeng

Differential Revision: https://phabricator.services.mozilla.com/D207228